[package]
name = "newt-sys"
version = "0.2.0"
authors = ["Robert Gill <rtgill82@gmail.com>"]
description = "Low-level bindings for the Newt console UI library"
repository = "https://github.com/rtgill82/newt-sys"
license = "LGPL-2.0-only"
categories = ["external-ffi-bindings", "os::unix-apis"]
keywords = ["bindings", "ffi", "tui"]
readme = "README.md"
edition = "2018"

links = "newt"
build = "build/build.rs"

[build-dependencies]
cc = "1.0"
lazy_static = "1.0"
pkg-config = "0.3"
regex = "1.0"

[features]
static = []
